# gonka

./: .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  REVIEW.md
Wiki/: 25 переносимых идей gonka.md  BLS-порог — слот-взвешенный Shamir.md  Bandwidth limiter — честная доля узла.md  Bitcoin-награды — дефляция через фикс-пул.md  Broker — декларативный реконсилятор узлов.md  Devshard gossip — живучесть при обходе.md  Devshard — платёжный канал инференса.md  EVM-мост — порог BLS авторизует.md  EpochGroup — переиспользование x-group.md  Genesis Guardian — вето без контроля.md  MOC — gonka.md  Off-chain данные — on-chain обязательства.md  PoC-движок — расстояние на сфере.md  PoC-делегирование — N к 1 передача веса.md  Proof of Compute 2.0 — власть есть вычисление.md  SPRT — последовательный детектор мошенника.md  State root и кворум — расчёт за одну транзакцию.md  Testermint — спецификация инвариантов.md  gonka — Жизненный цикл эпохи.md  gonka — Контекстная карта.md  Анатомия апгрейда — миграция в хендлере.md  Гибридный вес — база плюс залог.md  Две реализации PoC — v1 и v2.md  Две системы власти — consensus и epoch-group.md  Детерминизм — дисциплина консенсуса.md  Динамическое ценообразование — EIP-1559 по моделям.md  Нонс — тройной идентификатор.md  Обучение — построено и удалено.md  Сид — подпись как источник нонсов.md  Хеш в случайную модель — pool-трюк.md  Эпоха — главные часы сети.md
architecture/: 00-system-map.md  01-core-proof-of-compute.md  02-supporting-contexts.md  03-orchestration-dapi.md  04-devshard-payment-channel.md  05-economics.md  06-ideas-catalog.md  07-mlnode-compute.md  08-bridge-and-protocol.md  09-testing-and-evolution.md  10-deep-mechanisms.md  11-advanced-subsystems.md  README.md  helicopter-view.md
repo/: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  add_founders_to_genesis.sh  copy_proto.sh  reproduce_consensus_failure.sh  revert_import_only_changes.sh
repo/.junie/: guidelines.md
repo/inference-chain/contracts/liquidity-pool/: Cargo.toml  Makefile  build.sh
repo/inference-chain/contracts/liquidity-pool/artifacts/: checksums.txt  liquidity_pool.wasm
repo/inference-chain/contracts/liquidity-pool/src/: contract.rs  error.rs  msg.rs  state.rs
repo/inference-chain/contracts/wrapped-token/: Cargo.toml  Makefile  build.sh
repo/inference-chain/contracts/wrapped-token/artifacts/: checksums.txt  wrapped_token.wasm
repo/inference-chain/contracts/wrapped-token/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
repo/mlnode/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
repo/mlnode/.github/workflows/: benchmarks.yml  unit-tests.yml
repo/mlnode/docs/: inference-validation.md
(+2290 files in other folders)
