[package]
name = "wrapped-token"
version = "0.1.0"
authors = ["Inference Team"]
edition = "2021"
description = "Custom CW20 bridge token contract for cross-chain token management"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.12"
serde = { version = "1.0.184", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.44" }
cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
cw-utils = "2.0.0"
prost = "0.12"
prost-derive = "0.12"

[dev-dependencies]
cw-multi-test = "2.2.2"